# project-sdn-core

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_VNRT.md  PROGRESS.md  README.md  TOPOLOGIA_Y_DESPLIEGUE.md  connect_vms.txt  instalacion_dhcp.md  karaf_incidente_20260620.log.txt  m6_traductor_version_reactivo.py  m6_traductor_versiondhcp.py  portal_cautivo.py  portal_cautivo_cambios_m6_reactivo.py  portal_web.py  radius_db_pucp_sdn.sql  requirements.txt
M2/: client.http  docker-compose.yaml
app/: __init__.py  agregar_al_portalcautivopy.md  config.py  dependencies.py  dhcp_manager.py  main.py
app/modules/m3_mon/: config.yaml  m3m4.md  meson.build
app/modules/m3_mon/common/: alert_schema.c  alert_schema.h  rest_helper.h
app/modules/m3_mon/src/: alert.c  alert.h  bloom.c  bloom.h  capture.c  capture.h  config.h  detection.c  detection.h  flow_table.c  flow_table.h  host_table.c  host_table.h  main.c
db/: docker-compose.yaml  radius_db_pucp_sdn.sql
despliegue/: aaa-policies-compose.yaml
dhcp/: kea-dhcp4.conf
docker/: Dockerfile  docker-compose.yml
docs/: 00-overview.md  01-arquitectura.md  02-modulos-core.md  03-estructura-repo.md  04-desarrollo-despliegue.md  05-enfoque-controlador-onos.md  06-pipeline-tablas-vlan.md  METRICAS_IMPLEMENTACION_R3.md  PLAN_PRUEBAS_FUNCIONALES_R3.md  PLAN_PRUEBAS_R3_DETECCION_MITIGACION.md  README.md  REPORTE_LAB6_CONFIGURACION_SLICE.md  analisis_recursos_sdn.md  analisis_recursos_sdn_ppt.md  estado_actual.md
logica_demo/: dhcp_manager (1).py  dhcp_pools.yaml  dhcp_simulado (1).py  dictionary  packet_in_proxy.py  (+8 more)
(+252 files in other folders)
